fix: sync panel styles: overflowing

--- a/src/styles/themes/proton/sidebar/panel.sync.entry.styl
+++ b/src/styles/themes/proton/sidebar/panel.sync.entry.styl
@@ -63,7 +63,8 @@
 
 .SyncEntry .sync-header .profile
   position: relative
-  margin: 6px 6px 0
+  max-width: calc(100% - 6px)
+  margin: 6px 0 0 6px
   flex-grow: 0
   overflow: hidden
   white-space: nowrap
